# azure-kinect-yolov8-ros2

./: image_converter_node.py
Azure_Kinect_ROS_Driver/: CMakeLists.txt  package.xml
Azure_Kinect_ROS_Driver/include/azure_kinect_ros_driver/: k4a_2d_transform.hpp  k4a_ros_device.h
Azure_Kinect_ROS_Driver/launch/: custom.launch.py  driver.launch.py
Azure_Kinect_ROS_Driver/src/: k4a_2d_transform.cpp  k4a_calibration_transform_data.cpp  k4a_ros_bridge_node.cpp
Image_Capture/: package.xml  setup.cfg  setup.py
Image_Capture/Image_Capture/: image_capture_node.py
capture_pointcloud/: CMakeLists.txt
capture_pointcloud/src/: capture_pointcloud.cpp  publish_pointcloud.cpp
ros2-yolov8-fork/yolov8_ros/yolov8_ros/: setup.py
ros2-yolov8-fork/yolov8_ros/yolov8_ros/yolov8_ros/: debug_node.py  depth_converter_node.py  detect_3d_node.py  image_converter_node.py  rgb_converter_node.py  tracking_node.py  (+1 more)
ros2_pcl_distance/: setup.cfg
ros2_pcl_distance/install/: setup.bash  setup.zsh
ros2_pcl_distance/ros2_pcl_distance/: point_cloud_only.py  point_cloud_rgb.py  ros2_point_cloud_distance.py
transform_broadcaster_to_ee/: package.xml  setup.cfg  setup.py
transform_broadcaster_to_ee/transform_broadcaster_to_ee/: test_broadcaster.py  transform_broadcaster_to_ee_node.py
ws_dist/: point1.pcd  point1_transformed.pcd  point2.pcd  point2_filtered.pcd  point2_transformed.pcd  point3.pcd  point3_transformed.pcd  point4.pcd  point4_filtered.pcd  point4_transformed.pcd
ws_dist/src/capture_pointcloud/: CMakeLists.txt  package.xml
ws_dist/src/ros2_pcl_distance/: package.xml  setup.py
xarm/: test.urdf  xarm6_robot_kinect.urdf  xarm6_with_gripper.urdf
xarm/end_effector/: end_effector.stl  meter.stl
(+15 files in other folders)
